# controladores/authController.js
@@ -3,18 +3,26 @@ const jwt = require('jsonwebtoken');
 const User = require('../models/user');
 require('dotenv').config();
 
+// Registro de usuários
 exports.userRegistration = async (req, res) => {
   try {
-    const { username, email, password } = req.body;
+    const { username, email, password, role } = req.body; // `role` pode ser opcional
     const hashedPassword = await bcrypt.hash(password, 10);
 
-    const newUser = await User.create({ username, email, password: hashedPassword });
+    const newUser = await User.create({ 
+      username, 
+      email, 
+      password: hashedPassword, 
+      role: role || 'user' // Define o papel padrão como 'user'
+    });
+
     res.status(201).json({ userId: newUser.id, message: 'Usuário registrado com sucesso' });
   } catch (error) {
     res.status(400).json({ error: error.message });
   }
 };
 
+// Login de usuários
 exports.userLogin = async (req, res) => {
   try {
     const { email, password } = req.body;
@@ -25,7 +33,13 @@ exports.userLogin = async (req, res) => {
     const isPasswordValid = await bcrypt.compare(password, user.password);
     if (!isPasswordValid) return res.status(403).json({ message: 'Senha incorreta' });
 
-    const token = jwt.sign({ userId: user.id }, process.env.JWT_SECRET, { expiresIn: '1h' });
+    // Inclui o papel no payload do token
+    const token = jwt.sign(
+      { userId: user.id, role: user.role },
+      process.env.JWT_SECRET,
+      { expiresIn: '1h' }
+    );
+
     res.status(200).json({ token, message: 'Login bem-sucedido' });
   } catch (error) {
     res.status(400).json({ error: error.message });
